# local_ros_ws

./: Dockerfile
simpleservice_ws/install/: local_setup.sh  setup.sh
simpleservice_ws/install/cpp_srvcli/lib/cpp_srvcli/: client  server
simpleservice_ws/install/cpp_srvcli/share/ament_index/resource_index/parent_prefix_path/: cpp_srvcli
simpleservice_ws/install/cpp_srvcli/share/cpp_srvcli/: package.sh  package.xml
simpleservice_ws/install/tutorial_interfaces/include/tutorial_interfaces/tutorial_interfaces/srv/: speed_control.h  stop_motor.h  stop_motor.hpp
simpleservice_ws/install/tutorial_interfaces/share/ament_index/resource_index/rosidl_interfaces/: tutorial_interfaces
simpleservice_ws/install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.sh  package.sh
simpleservice_ws/install/tutorial_interfaces/share/tutorial_interfaces/cmake/: rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  tutorial_interfaces__rosidl_typesupport_introspection_cExport.cmake
simpleservice_ws/install/tutorial_interfaces/share/tutorial_interfaces/srv/: SpeedControl.json  StopMotor.idl  StopMotor.json  StopMotor.srv
simpleservice_ws/log/: latest_build
simpleservice_ws/src/cpp_srvcli/: CMakeLists.txt
simpleservice_ws/src/cpp_srvcli/src/: MotorController.cpp  MotorController.hpp  control_node.cpp  motor_node.cpp
simpleservice_ws/src/tutorial_interfaces/: CMakeLists.txt
simpleservice_ws/src/tutorial_interfaces/srv/: SpeedControl.srv
(+23 files in other folders)
